--- a/copy and human eval.ipynb
+++ b/copy and human eval.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,16 +96,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "224310"
+       "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,15 +113,18 @@
    "source": [
     "rewritten = read_txt('unseen_from_bert-base-uncased_predicted_by_bert-base-uncased_rewritten_data.txt')\n",
     "original = read_txt('all_data.txt')\n",
-    "generated = read_txt('bert_rewrite_blenderbot_small-90M_generate.txt')\n",
+    "original_generated = read_txt('all_data_blenderbot_small-90M_generate.txt')\n",
+    "rewritten_generated = read_txt('bert_rewrite_blenderbot_small-90M_generate.txt')\n",
     "\n",
-    "len(original)"
+    "len(original) == len(original_generated) == len(rewritten_generated)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -129,7 +132,7 @@
        "74175"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,20 +153,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "74175"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from operator import itemgetter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "original_generated = read_txt('all_data_blenderbot_small-90M_generate.txt')"
+    "len(idx)"
    ]
   },
   {
@@ -172,13 +177,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('humanEval_original.txt', 'w') as f:\n",
-    "    f.write('\\n'.join(list(itemgetter(*idx)(original_generated))))"
+    "# index list for rewriteen sentecnes\n",
+    "diff_idx = [i for i, (o, r) in enumerate(zip(original_generated, rewritten_generated)) if o != r]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "61456"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(diff_idx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#from operator import itemgetter\n",
+    "#with open('humanEval_original.txt', 'w') as f:\n",
+    "    #f.write('\\n'.join(list(itemgetter(*idx)(original_generated))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,332 +232,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "samp = random.sample(idx,200)"
+    "samp_idx = random.sample(idx,200)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[163632,\n",
-       " 4035,\n",
-       " 117290,\n",
-       " 144663,\n",
-       " 75890,\n",
-       " 106131,\n",
-       " 171521,\n",
-       " 63328,\n",
-       " 146539,\n",
-       " 48628,\n",
-       " 170170,\n",
-       " 102704,\n",
-       " 222660,\n",
-       " 68394,\n",
-       " 218776,\n",
-       " 73257,\n",
-       " 139329,\n",
-       " 35725,\n",
-       " 209564,\n",
-       " 161764,\n",
-       " 198936,\n",
-       " 65304,\n",
-       " 57958,\n",
-       " 80694,\n",
-       " 30529,\n",
-       " 74420,\n",
-       " 134193,\n",
-       " 126338,\n",
-       " 9311,\n",
-       " 180644,\n",
-       " 133333,\n",
-       " 10635,\n",
-       " 201478,\n",
-       " 163172,\n",
-       " 1313,\n",
-       " 2609,\n",
-       " 64232,\n",
-       " 70227,\n",
-       " 112422,\n",
-       " 38936,\n",
-       " 162816,\n",
-       " 41429,\n",
-       " 71237,\n",
-       " 147233,\n",
-       " 91519,\n",
-       " 206651,\n",
-       " 129543,\n",
-       " 15835,\n",
-       " 91399,\n",
-       " 46922,\n",
-       " 197031,\n",
-       " 85072,\n",
-       " 219640,\n",
-       " 72921,\n",
-       " 101398,\n",
-       " 170418,\n",
-       " 204586,\n",
-       " 50837,\n",
-       " 16423,\n",
-       " 64345,\n",
-       " 118306,\n",
-       " 3728,\n",
-       " 58798,\n",
-       " 90114,\n",
-       " 137344,\n",
-       " 212712,\n",
-       " 134318,\n",
-       " 61471,\n",
-       " 151534,\n",
-       " 127051,\n",
-       " 5099,\n",
-       " 19374,\n",
-       " 23754,\n",
-       " 175041,\n",
-       " 30858,\n",
-       " 152335,\n",
-       " 70420,\n",
-       " 4644,\n",
-       " 144424,\n",
-       " 84679,\n",
-       " 202306,\n",
-       " 47622,\n",
-       " 189679,\n",
-       " 24004,\n",
-       " 5450,\n",
-       " 194162,\n",
-       " 127913,\n",
-       " 165222,\n",
-       " 217154,\n",
-       " 78908,\n",
-       " 143145,\n",
-       " 46759,\n",
-       " 220284,\n",
-       " 58533,\n",
-       " 31409,\n",
-       " 195370,\n",
-       " 64669,\n",
-       " 131650,\n",
-       " 90726,\n",
-       " 79627,\n",
-       " 64102,\n",
-       " 63827,\n",
-       " 113112,\n",
-       " 58745,\n",
-       " 212014,\n",
-       " 35498,\n",
-       " 205156,\n",
-       " 1269,\n",
-       " 57344,\n",
-       " 1229,\n",
-       " 195774,\n",
-       " 72556,\n",
-       " 37580,\n",
-       " 103840,\n",
-       " 199431,\n",
-       " 159435,\n",
-       " 25859,\n",
-       " 181479,\n",
-       " 163676,\n",
-       " 71351,\n",
-       " 95751,\n",
-       " 72315,\n",
-       " 10802,\n",
-       " 146501,\n",
-       " 129768,\n",
-       " 69007,\n",
-       " 154982,\n",
-       " 69852,\n",
-       " 69899,\n",
-       " 204594,\n",
-       " 97822,\n",
-       " 162260,\n",
-       " 202529,\n",
-       " 163987,\n",
-       " 127536,\n",
-       " 47055,\n",
-       " 26441,\n",
-       " 181353,\n",
-       " 76402,\n",
-       " 79024,\n",
-       " 52862,\n",
-       " 209540,\n",
-       " 91756,\n",
-       " 129655,\n",
-       " 114788,\n",
-       " 49024,\n",
-       " 212431,\n",
-       " 201330,\n",
-       " 23094,\n",
-       " 102264,\n",
-       " 167678,\n",
-       " 17388,\n",
-       " 143035,\n",
-       " 203980,\n",
-       " 211524,\n",
-       " 42135,\n",
-       " 26531,\n",
-       " 61191,\n",
-       " 145781,\n",
-       " 13813,\n",
-       " 107804,\n",
-       " 174623,\n",
-       " 144761,\n",
-       " 157753,\n",
-       " 120579,\n",
-       " 176681,\n",
-       " 103868,\n",
-       " 122387,\n",
-       " 194447,\n",
-       " 189510,\n",
-       " 19714,\n",
-       " 104170,\n",
-       " 175215,\n",
-       " 11586,\n",
-       " 86409,\n",
-       " 135564,\n",
-       " 53235,\n",
-       " 764,\n",
-       " 32643,\n",
-       " 12139,\n",
-       " 43597,\n",
-       " 73655,\n",
-       " 155825,\n",
-       " 193591,\n",
-       " 71317,\n",
-       " 106980,\n",
-       " 137129,\n",
-       " 81896,\n",
-       " 117835,\n",
-       " 123767,\n",
-       " 152397,\n",
-       " 29515,\n",
-       " 118132,\n",
-       " 144662,\n",
-       " 15951,\n",
-       " 164644,\n",
-       " 74334,\n",
-       " 62843,\n",
-       " 32158,\n",
-       " 55921]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "samp"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'awsome  you mean the state in the southeastern and mid atlantic regions '"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 200/200 [00:00<00:00, 248698.73it/s]\n"
+     ]
     }
    ],
    "source": [
-    "original[4035]"
+    "from tqdm import tqdm\n",
+    "original_inputs = []\n",
+    "rewritten_inputs = []\n",
+    "origianl_res = []\n",
+    "original_gens = []\n",
+    "rewritten_gens = []\n",
+    "\n",
+    "for i in tqdm(samp_idx):\n",
+    "    original_inputs.append(original[i])\n",
+    "    rewritten_inputs.append(rewritten[i])\n",
+    "    origianl_res.append(original[i+1])\n",
+    "    original_gens.append(original_generated[i+1])\n",
+    "    rewritten_gens.append(rewritten_generated[i+1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'yup that is the one '"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "original[4036]"
+    "df = pd.DataFrame()\n",
+    "df['original input'] = original_inputs\n",
+    "df['original response'] = origianl_res\n",
+    "df['original generate'] = original_gens\n",
+    "df['rewritten generate'] = rewritten_gens\n",
+    "df['rewritten input'] = rewritten_inputs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'do  you mean the state in the southeastern and mid atlantic regions '"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "rewritten[4035]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\" that is the one '"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rewritten[4036]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"yes, it's a great state.\""
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "original_generated[4035]"
+    "df.to_csv('human eval.csv', index=False)"
    ]
   },
   {
@@ -556,7 +332,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -1592,7 +1368,7 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "scrolled": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -2064,6 +1840,109 @@
     "#                 else:\n",
     "#                     f.write(g)\n",
     "#                     f.write('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DialoGPT eval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(original)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "224310"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(original)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "original_20 = original[:45135]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = open('original_20.txt', 'w')\n",
+    "file.write('\\n'.join(original_20))\n",
+    "file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = read_txt('original_20.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "45135"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(test)"
    ]
   },
   {
